# Math-Solver

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Element.hpp  MathSolver.cpp
src/core/: Function.cpp  Function.hpp  Set.cpp  Set.hpp
test/: CMakeLists.txt
test/core/: FunctionTest.cpp  SetTest.cpp
